# pbr-skybox-convolver

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Convolver.cpp  Convolver.hpp  Convolver_internal.hpp  HDRReadTest  HDRReadTest.cpp  Makefile  README.md
include/: Bitmap.hpp  Convolver.hpp  Convolver_internal.hpp  HDR.hpp
src/: Convolver.cpp  HDR.cpp
test/: HDRReadTest.cpp
